# dir_sync

./: CMakeLists.txt  README.md
cmake/: FindQt5BaseDir.cmake
src/: config.cpp  config.hpp  dir_tree.cpp  dir_tree.hpp  exceptions.hpp  main.cpp  thread_pool.cpp  thread_pool.hpp
src/ui/: main_window.cpp  main_window.hpp
